[project]
name = "dora-samurai"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "Dora node for video object segmentation and tracking using SAMURAI"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "dora-rs >= 0.3.9",
  "numpy>=1.22.0",
  "opencv-python>=4.5.0",
  "pillow>=9.0.0",
  "pyarrow>=10.0.0",
  "torch>=2.0.0",  # CUDA support is required
  "torchvision>=0.15.0",
  "setuptools>=58.0.4",  # Explicitly include setuptools for build
]

[build-system]
requires = ["setuptools>=58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
dora-samurai = "dora_samurai.main:main"

[tool.ruff.lint]
extend-select = [
  "D",    # pydocstyle
  "UP",   # Ruff's UP rule
  "PERF", # Ruff's PERF rule
  "RET",  # Ruff's RET rule
  "RSE",  # Ruff's RSE rule
  "NPY",  # Ruff's NPY rule
  "N",    # Ruff's N rule
  "I",    # Ruff's I rule
]